require express & listen on port

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/rachaelchar/Hot-Restaurant/issues"
   },
-  "homepage": "https://github.com/rachaelchar/Hot-Restaurant#readme"
+  "homepage": "https://github.com/rachaelchar/Hot-Restaurant#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
